Import of ADAMK/Devel-Dumpvar-0.02 from CPAN.
gitpan-cpan-distribution: Devel-Dumpvar
gitpan-cpan-version:      0.02
gitpan-cpan-path:         ADAMK/Devel-Dumpvar-0.02.tar.gz
gitpan-cpan-author:       ADAMK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Devel::Dumpvar
 
-0.1  Thu  8 Apr 2003
+0.02  Thu Aug  5 2004
+	- Adding basic CODE support
+
+0.01  Thu Apr  8 2003
 	- Adding initial version
